# ERP-THEME

./: .gitignore  erp (1).html
diigoo-erp/: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
diigoo-erp/apps/web/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
diigoo-erp/apps/web/src/: middleware.ts
diigoo-erp/apps/web/src/app/: globals.css  layout.tsx  page.tsx
diigoo-erp/apps/web/src/app/(app)/about/: page.tsx
diigoo-erp/apps/web/src/app/login/: page.tsx
diigoo-erp/apps/web/src/components/: crm-detail.tsx  module-overview.tsx
diigoo-erp/apps/web/src/components/hrm/: employee-month-attendance.tsx
diigoo-erp/apps/web/src/components/icon/: freehand-all.json  freehand-modules.json  freehand-nav.json  lucide.tsx  module-icon.tsx  nav-icon.tsx
diigoo-erp/apps/web/src/components/layout/: AppShell.tsx  ModuleScaffold.tsx  Sidebar.tsx  Topbar.tsx
diigoo-erp/apps/web/src/components/ui/: charts.tsx  form.tsx  gate.tsx  index.ts  overlay.tsx  primitives.tsx  table.tsx  tabs.tsx
diigoo-erp/apps/web/src/data/: tenant.ts
diigoo-erp/apps/web/src/lib/: apiClient.ts  authMock.ts  cn.ts  coreClient.ts  export.ts  hooks.ts  http.ts  pdf.ts
diigoo-erp/apps/web/src/modules/: catalog.ts  registry.ts
diigoo-erp/apps/web/src/modules/crm/: data.ts  manifest.ts  ui.ts
diigoo-erp/apps/web/src/modules/hrm/: data.ts  manifest.ts  repo.ts  types.ts  ui.tsx
diigoo-erp/apps/web/src/platform/: accounts.ts  dashboards.ts  home.ts  integrations.ts  modules.ts  notifications.ts  packages.ts  rbac.ts  session.ts  tenant.ts  theme.ts  types.ts
diigoo-erp/db/migrations/: 0001_init.sql  0002_seed.sql  0003_auth.sql  0004_leave.sql
diigoo-erp/scripts/: backend-down.sh  backend-up.sh  core.sh
diigoo-erp/services/core/: Cargo.toml  Dockerfile
diigoo-erp/services/core/apps/gateway/: Cargo.toml
diigoo-erp/services/core/apps/gateway/src/: main.rs
diigoo-erp/services/core/crates/auth/: Cargo.toml
diigoo-erp/services/core/crates/auth/src/: lib.rs
diigoo-erp/services/core/crates/crm/: Cargo.toml
diigoo-erp/services/core/crates/crm/src/: lib.rs
diigoo-erp/services/core/crates/hrm/: Cargo.toml
diigoo-erp/services/core/crates/hrm/src/: lib.rs  models.rs  repo.rs  routes.rs
diigoo-erp/services/core/crates/shared/: Cargo.toml
diigoo-erp/services/core/crates/shared/src/: api.rs  auth.rs  config.rs  context.rs  db.rs  error.rs  lib.rs  rbac.rs
(+79 files in other folders)
