# Diigoo ERP core — Rust workspace.
#
# Modular by design: each business module is its own crate (hrm, crm, …) that
# exposes an Axum Router. The `gateway` binary mounts whichever modules are
# compiled in, so a module can run *individually* (its own router in tests) or
# *combined* (all mounted under one process). Mirrors the TypeScript module
# registry on the frontend.
[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/auth",
    "crates/hrm",
    "crates/crm",
    "apps/gateway",
]

[workspace.package]
edition = "2021"
version = "2.0.0"
license = "UNLICENSED"
authors = ["Diigoo Tech Private Limited"]

[workspace.dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }

shared = { path = "crates/shared" }
hrm = { path = "crates/hrm" }
crm = { path = "crates/crm" }
auth = { path = "crates/auth" }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
