[package]
name = "shared"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
bcrypt.workspace = true
uuid.workspace = true
